syntax = "proto3";
import "beam.proto";
package gobeam;

service RobotService {
	rpc StreamReport (StreamRequest) returns (stream Report) {}
}

message StreamRequest {}